# gRPC-Relay

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README-cn_ZH.md  README.md  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  create-release.yml  release.yml
config/: relay.yaml
crates/controller-sdk/: Cargo.toml
crates/controller-sdk/examples/: simple_controller.rs
crates/controller-sdk/src/: client.rs  config.rs  connect.rs  error.rs  lib.rs  list.rs  session.rs
crates/device-sdk/: Cargo.toml  README.md
crates/device-sdk/examples/: station_service.yaml  station_service_minimal.rs
crates/device-sdk/src/: backoff.rs  client.rs  config.rs  error.rs  handler.rs  lib.rs
crates/relay/: Cargo.toml
crates/relay-proto/: Cargo.toml  build.rs
crates/relay-proto/proto/relay/v1/: relay.proto
crates/relay-proto/src/: lib.rs
crates/relay/src/: alerting.rs  api.rs  audit.rs  auth.rs  config.rs  error.rs  grpc_service.rs  idempotency.rs  lib.rs  logging.rs  main.rs  mqtt.rs  observability.rs  rate_limiter.rs  rbac.rs  relay_metrics.rs  resource_monitor.rs  security_metrics.rs  session.rs  state.rs  stream.rs  test_helpers.rs  transport.rs  validator.rs
deploy/: BUILD.md  README.md
deploy/bare-metal/: README.md  install.sh  relay.env.example  relay.service  uninstall.sh  upgrade.sh
deploy/docker/: .env.example  README.md
deploy/grafana/dashboards/: dashboards.yml  relay-overview.json
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  relay.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deploy/prometheus/: prometheus.yml
doc/: RELEASE.md  action_plan.md  architecture.md  controller_sdk.md  device_sdk.md  full_sysytem_overview.md  operations.md  protocol_spec.md  requirements.md  v1.0_release_summary.md
scripts/: prepare-release.sh
