[workspace]
members = [
    "crates/relay",
    "crates/relay-proto",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["gPRC-Relay Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
clap = { version = "4", features = ["derive"] }
