[workspace]
members = [
    "crates/relay",
    "crates/relay-proto",
    "crates/device-sdk", "crates/controller-sdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["gRPC-Relay Contributors"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
hyper = "1.9"
time = { version = "0.3", features = ["formatting"] }
jsonwebtoken = "9"
