[workspace]
members = [
    "crates/relay",
    "crates/relay-proto",
    "crates/device-sdk", "crates/controller-sdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "1.0.0-rc1"
license = "MIT"
authors = ["gRPC-Relay Contributors"]
repository = "https://github.com/cokkiy/gRPC-Relay"
homepage = "https://github.com/cokkiy/gRPC-Relay"
documentation = "https://github.com/cokkiy/gRPC-Relay#readme"
readme = "README.md"
keywords = ["grpc", "relay", "sdk", "iot"]
categories = ["network-programming"]

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-opentelemetry = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.15"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
hyper = "1.9"
time = { version = "0.3", features = ["formatting"] }
jsonwebtoken = "9"
prometheus = "0.13"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic", "trace"] }
