[package]
name = "device-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = { workspace = true }

tonic = { version = "0.11", features = ["transport"] }
serde = { workspace = true, features = ["derive"] }
config = { workspace = true }

# utils
async-trait = "0.1"
bytes = "1"
tokio-stream = "0.1"

# local
relay-proto = { path = "../relay-proto" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
