[package]
name = "relay-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"
