[package]
name = "relay-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Shared protobuf and gRPC bindings for the gRPC-Relay workspace"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
protoc-bin-vendored = "3"
