[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
time = { workspace = true }
relay-proto = { path = "../relay-proto" }
