[package]
name = "relay"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
axum = { workspace = true, features = ["tokio"] }
hyper = { workspace = true }
time = { workspace = true }
jsonwebtoken = { workspace = true }
rumqttc = "0.24"

# gRPC server + streaming
tonic = { version = "0.11", features = ["transport", "tls"] }
tokio-stream = { version = "0.1", features = ["net"] }

# Idempotency cache (LRU + TTL)
lru_time_cache = "0.11"

# Session / in-flight coordination
dashmap = "6"

# System resource monitoring (CPU/memory for rate limiting)
sysinfo = "0.31"

relay-proto = { path = "../relay-proto" }

[dev-dependencies]
tempfile = "3"
